@@ -357,6 +357,21 @@ return|;
 block|}
 annotation|@
 name|Override
+DECL|method|width
+specifier|public
+name|int
+name|width
+parameter_list|()
+block|{
+return|return
+name|in
+operator|.
+name|width
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|collect
 specifier|public
 name|void
