@@ -448,6 +448,18 @@ return|;
 block|}
 annotation|@
 name|Override
+DECL|method|width
+specifier|public
+name|int
+name|width
+parameter_list|()
+block|{
+return|return
+name|matchWidth
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|collect
 specifier|public
 name|void
