@@ -372,20 +372,16 @@ literal|1
 expr_stmt|;
 return|return;
 block|}
-name|int
-name|matchLength
-init|=
-name|endPos
-operator|-
-name|startPos
-decl_stmt|;
 name|freq
 operator|+=
 name|docScorer
 operator|.
 name|computeSlopFactor
 argument_list|(
-name|matchLength
+name|spans
+operator|.
+name|width
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|prevStartPos
